# Kernel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  package.sh  x.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
bootloader/limine/: Cargo.toml  build.rs  linker.ld
bootloader/limine/src/: acpi.rs  framebuffer.rs  main.rs  memory_map.rs  stack.rs
bootloader/rust/: Cargo.toml  boot.json
bootloader/rust/src/: acpi.rs  framebuffer.rs  main.rs  memory.rs  stack.rs
crates/acpi/: Cargo.toml
crates/acpi/src/: hpet.rs  lib.rs  rsdp.rs
crates/bootloader_uefi/: Cargo.toml
crates/bootloader_uefi/src/: loader.rs  main.rs  sdt.rs
crates/bootloader_uefi/src/mapper/: mod.rs  x86_64.rs
crates/common/: Cargo.toml
crates/common/src/: addr.rs  lib.rs  magic.rs  memory.rs
crates/common/src/sync/: lazy.rs  mod.rs  once.rs  rwlock.rs  section.rs
crates/common/src/sync/section/: mod.rs  x86_64.rs
crates/config/: Cargo.toml
crates/config/src/: attr.rs  file.rs  lib.rs  macros.rs
crates/config/src/configuration/: all.rs  any.rs  mod.rs  resolver.rs  segment.rs
crates/config/src/value/: mod.rs  resolver.rs
crates/config_macros/: Cargo.toml
crates/config_macros/src/: executer.rs  file.rs  lib.rs  query.rs
crates/kmm/: Cargo.toml
crates/kmm/src/: allocator.rs  fixed.rs  free.rs  lib.rs  mapping.rs  memory_map.rs  platform.rs
crates/kmm/src/setup/: direct_mapping.rs  mod.rs
crates/logging/: Cargo.toml
crates/logging/src/: escape.rs  lib.rs  serial.rs  terminal.rs  theme.rs
crates/memory/: Cargo.toml
crates/memory/src/: addr.rs  frame.rs  lib.rs  page.rs  page_table.rs  size.rs  translation.rs
crates/memory/src/kernel/: allocator.rs  fixed.rs  free.rs  mapping.rs  mod.rs
crates/platform-x86_64/: Cargo.toml  build.rs  limine.cfg
crates/platform-x86_64/src/: counter.rs  logging.rs  main.rs  stack.rs
crates/platform-x86_64/src/cpu/: gdt.rs  idt.rs  mod.rs  registers.rs
crates/platform-x86_64/src/devices/: mod.rs  tsc.rs
crates/platform-x86_64/src/devices/apic/: base.rs  error.rs  mod.rs
crates/platform-x86_64/src/interrupts/: apic_error.rs  timer.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/kernel/: boot.md  index.md  logging.md  memory.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/bootloader/limine/: Cargo.toml  limine.cfg
kernel/bootloader/limine/src/: framebuffer.rs  memory_map.rs
kernel/crates/common/: Cargo.toml
kernel/crates/common/src/: addr.rs  memory.rs
kernel/crates/common/src/sync/: lazy.rs
kernel/crates/common/src/sync/section/: mod.rs
kernel/crates/config/: Cargo.toml
kernel/crates/config/src/: file.rs
kernel/crates/config/src/configuration/: all.rs  not.rs  option.rs  resolver.rs  segment.rs
kernel/crates/config/src/value/: resolver.rs
kernel/crates/memory/: Cargo.toml
kernel/crates/memory/src/: lib.rs  page.rs
kernel/modules/acpi/: Cargo.toml
kernel/modules/acpi/src/: lib.rs  rsdp.rs  table.rs  utils.rs
kernel/modules/interface/: Cargo.toml
kernel/modules/kmm/: Cargo.toml
kernel/modules/kmm/src/: lib.rs  magic.rs
kernel/modules/kmm/src/allocation/: fixed.rs  mod.rs  paged.rs
kernel/modules/kmm/src/setup/mapping/: direct.rs  mod.rs
kernel/modules/kmm/src/setup/memory_map/: mod.rs
kernel/modules/kmm/src/vmm/: translate.rs
kernel/modules/logging/: Cargo.toml  Config.toml
kernel/modules/logging/src/: lib.rs  serial.rs
kernel/modules/logging/src/terminal/: framebuffer.rs  mod.rs  theme.rs
kernel/modules/logging/src/terminal/escape/: mod.rs  mode.rs
kernel/modules/pi-x86_64/: Cargo.toml
kernel/modules/pi-x86_64/src/: counter.rs  idt.rs  lib.rs  magic.rs
kernel/modules/pi-x86_64/src/devices/: hpet.rs  tsc.rs
kernel/modules/pi-x86_64/src/devices/apic/: base.rs  ipi.rs
kernel/modules/pi-x86_64/src/interrupts/: apic_error.rs  mod.rs  timer.rs
kernel/modules/runner/: Cargo.toml
kernel/modules/runner/src/: lib.rs
libs/bootloader/: Bootloader.md
libs/bootloader/src/: lib.rs  memory.rs
libs/config_macros/: Cargo.toml
libs/config_macros/src/: executer.rs  file.rs  query.rs
libs/hpet/: Cargo.toml
libs/hpet/src/: comparator.rs  lib.rs  registers.rs  timer.rs
modules/acpi/: Cargo.toml
modules/acpi/src/: header.rs  hpet.rs  lib.rs  table.rs  utils.rs
modules/interface/: Cargo.toml
modules/interface/src/: lib.rs
modules/kmm/: Cargo.toml
modules/kmm/src/: lib.rs  magic.rs  page_flags.rs
modules/kmm/src/allocation/: fixed.rs  mod.rs  paged.rs
modules/kmm/src/pmm/: bitmap.rs  mod.rs
modules/kmm/src/setup/: mod.rs
modules/kmm/src/setup/mapping/: direct.rs  kernel.rs  mod.rs  utils.rs
modules/kmm/src/setup/memory_map/: limine.rs  mod.rs  rust.rs
modules/kmm/src/vmm/: mapping.rs  mod.rs  translate.rs
modules/logging/: Cargo.toml
modules/logging/src/: framebuffer.rs  lib.rs  position.rs  serial.rs  terminal.rs  theme.rs
modules/logging/src/escape/: mod.rs  mode.rs
modules/pi-x86_64/: Cargo.toml
modules/pi-x86_64/src/: counter.rs  gdt.rs  idt.rs  lib.rs  registers.rs
modules/pi-x86_64/src/devices/: hpet.rs  mod.rs  tsc.rs
modules/pi-x86_64/src/devices/apic/: error.rs  ipi.rs  mod.rs  registers.rs
modules/pi-x86_64/src/interrupts/: apic_error.rs  double_fault.rs  mod.rs  timer.rs
modules/runner/: Cargo.toml
modules/runner/src/: lib.rs
scripts/: __init__.py  arguments.py  build.py  main.py  pack.py  task.py
scripts/bootloader/: __init__.py  bootloader.py  limine.py
tools/: Cargo.toml
tools/config-cli/: Cargo.toml
tools/config-cli/src/: args.rs  main.rs  testing.rs
tools/config-cli/src/cli/: get.rs  list.rs  mod.rs  set.rs  utils.rs
tools/config-cli/src/tui/: mod.rs
xtask/: Cargo.toml
xtask/src/: arguments.rs  license.rs  main.rs  utils.rs
xtask/src/dependencies/: download.rs  git.rs  hooks.rs  manager.rs  mod.rs  predefined.rs  rust.rs
xtask/src/fs/: mod.rs
xtask/src/iso/: limine.rs  mod.rs
xtask/src/run/: limine.rs  mod.rs  rust.rs
