[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
color-eyre = { workspace = true }
clap = { workspace = true, features = ["derive"] }
xshell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
fatfs = { workspace = true }
ureq = { workspace = true }
ignore = { workspace = true }
