[package]
name = "bootloader_uefi"
version = "0.0.0"
edition = "2021"

[dependencies]
bootloader = { path = "../../libs/bootloader" }
uefi = { version = "0.17", features = ["exts"] }
elf = { version = "0.5", default-features = false }
uefi-services = "0.14"
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14"