[package]
name = "config_macros"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
toml = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits"] }
