[package]
name = "kmm"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
interface = { path = "../interface" }
common = { path = "../../crates/common" }
memory = { path = "../../crates/memory" }
log = { workspace = true }
spinning_top = { workspace = true }
limine = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { workspace = true }
