[package]
name = "logging"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
interface = { path = "../interface" }
common = { path = "../../crates/common" }
uart_16550 = { workspace = true }
log = { workspace = true }
noto-sans-mono-bitmap = { workspace = true }
