[package]
name = "pi"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
interface = { path = "../interface" }
common = { path = "../../crates/common" }
log = { workspace = true }
raw-cpuid = { workspace = true }
bitflags = { workspace = true }
x86_64 = { workspace = true }
