[package]
name = "runner"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
interface = { path = "../interface" }
logging = { path = "../logging" }
kmm = { path = "../kmm" }
acpi = { path = "../acpi" }
log = "0.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
pi = { path = "../pi-x86_64" }
