[package]
name = "runner"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
interface = { path = "../interface" }
logging = { path = "../logging" }
kmm = { path = "../kmm" }
acpi = { path = "../acpi" }
log = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
pi = { path = "../pi-x86_64" }
