[package]
name = "config-cli"
description = "Command line tool for editing Config.toml files"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
toml_edit = { workspace = true }
