[package]
name = "kmm"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
interface = { path = "../interface" }
common = { path = "../../crates/common" }
memory = { path = "../../crates/memory" }
log = { workspace = true }
spinning_top = { workspace = true }
limine = { workspace = true }
